syntax = "proto3";

package calculator;
option go_package = "github.com/AndreAppolariFilho/grpc-go-course/calculator/calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimesRequest{
    int32 number = 1;
}

message PrimesResponse{
    int32 primer_number = 1;
}
message AvgRequest{
    int32 number = 1;
}
message AvgResponse{
    double response = 1;
}
message MaxRequest{
    int32 number = 1;
}
message MaxResponse{
    int32 response = 1;
}
message SqrtRequest{
    int32 number = 1;
}
message SqrtResponse{
    double result = 1;
}
service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc Primes(PrimesRequest) returns (stream PrimesResponse){};
    rpc Avg(stream AvgRequest) returns (AvgResponse){};
    rpc Max(stream MaxRequest) returns (stream MaxResponse){};
    rpc Sqrt(SqrtRequest) returns (SqrtResponse){};
}